# Base

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  out
include/: tree
include/base/: AssetManager.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  Event.hpp  EventBus.hpp  Exports.hpp  Game.hpp  RenderContext.hpp  RenderContextSingleton.hpp  Scene.hpp  SceneData.hpp  SceneTransition.hpp  System.hpp  SystemManager.hpp
include/base/assets/: AssetHandle.hpp  AssetLayout.hpp  AssetManager.hpp  BaseAsset.hpp  Font.hpp  Texture.hpp
include/base/audio/: AudioEffect.hpp  AudioManager.hpp  AudioStream.hpp  Sound.hpp
include/base/camera/: Camera.hpp  Camera2DExt.hpp  CameraController.hpp  CameraManager.hpp  CameraModes.hpp  CameraShakeConfig.hpp
include/base/components/: ABBComponent.hpp  AnimationComponent.hpp  AreaComponent.hpp  BoundingBoxComponent.hpp  CameraComponent.hpp  CircleComponent.hpp  ColliderComponent.hpp  Component.hpp  ComponentBundle.hpp  GravityComponent.hpp  ImpulseComponent.hpp  InputComponent.hpp  MoveComponent.hpp  ProximityComponent.hpp  QuadComponent.hpp  RigidBodyComponent.hpp  ShapeComponent.hpp  SpriteComponent.hpp  StateComponent.hpp  TextureComponent.hpp  TimerComponent.hpp  TransformComponent.hpp  TransitionComponent.hpp
include/base/entities/: Entity.hpp  EntityManager.hpp
include/base/events/: EntityCollisionEvent.hpp
include/base/game/: Game.hpp  GameConfig.hpp  GameContext.hpp  RenderContext.hpp  RenderContextSingleton.hpp
include/base/input/: InputEvent.hpp  InputManager.hpp  Keys.hpp  MouseButtons.hpp  MouseState.hpp
include/base/particles/: ParticleEmitter.hpp  ParticleManager.hpp
include/base/renderer/: RenderContext.hpp  RenderContextSingleton.hpp  RenderLayer.hpp  Renderer.hpp  ShaderBuffer.hpp
include/base/rendering/: FrameBuffer.hpp  FramebufferAttachmentIndex.hpp  GeometryType.hpp  Material.hpp  Origin.hpp  Quad.hpp  RenderContextSingleton.hpp  RenderID.hpp  RenderLayer.hpp  Renderable.hpp  RenderingManager.hpp  Sprite.hpp  Text.hpp
include/base/scenes/: Engine.hpp  Scene.hpp  SceneData.hpp  (+7 more)
include/core/: Component.hpp  Game.hpp  Scene.hpp  System.hpp
src/: CMakeLists.txt  EntityManager.cpp  Game.cpp  RenderContextSingleton.cpp  SceneManager.cpp
src/assets/: AssetManager.cpp  BaseAsset.cpp  Font.cpp  Texture.cpp
src/audio/: AudioManager.cpp  AudioStream.cpp  Sound.cpp  SoundInstance.cpp
src/base/: AssetManager.cpp  Component.cpp  Entity.cpp  EntityManager.cpp  EventBus.cpp  Exception.cpp  Game.cpp  RenderContext.cpp  RenderContextSingleton.cpp  Scene.cpp  SceneManager.cpp  System.cpp  SystemManager.cpp
src/camera/: Camera.cpp  Camera2DExt.cpp  CameraController.cpp  CameraManager.cpp
src/components/: AnimationComponent.cpp  AreaComponent.cpp  BoundingBoxComponent.cpp  CircleComponent.cpp  ColliderComponent.cpp  Component.cpp  ComponentBundle.cpp  ImpulseComponent.cpp  InputComponent.cpp  ProximityComponent.cpp  QuadComponent.cpp  SpriteComponent.cpp  StateComponent.cpp  TimerComponent.cpp  TransitionComponent.cpp
src/entities/: Entity.cpp  EntityManager.cpp
src/game/: Game.cpp  RenderContext.cpp  RenderContextSingleton.cpp
src/include/core/entity/: EntityManager.hpp
src/include/core/game/: RenderContextSingleton.hpp
src/include/core/scene/: SceneManager.hpp
src/include/internal/: GameImpl.hpp
src/include/internal/audio/: AudioManager.hpp  SoundInstance.hpp
src/include/internal/camera/: Camera2DExt.hpp  CameraManagerImpl.hpp
src/include/internal/entity/: EntityManager.hpp
src/include/internal/exception/: Exception.hpp
src/include/internal/game/: GameImpl.hpp  RenderContext.hpp  RenderContextSingleton.hpp
src/include/internal/input/: InputListener.hpp  InputManager.hpp
src/include/internal/particles/: Particle.hpp  ParticleManagerImpl.hpp
src/include/internal/rendering/: IndexBuffer.hpp  RenderCommand.hpp  Renderer.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp  WindowMode.hpp
src/include/internal/rendering/batchers/: Batcher.hpp  CircleBatcher.hpp  QuadBatcher.hpp  TextBatcher.hpp  TextureBatcher.hpp
src/include/internal/scene/: SceneManager.hpp  SceneTransition.hpp
src/include/internal/system/: SystemManager.hpp
src/include/internal/systems/: AnimationSystem.hpp  AreaSystem.hpp  EntityCollisionSystem.hpp  InputSystem.hpp  MoveSystem.hpp  ProximitySystem.hpp  RenderSystem.hpp  StateSystem.hpp  TimerSystem.hpp
src/include/internal/util/: QuadTree.hpp  QuadTreeContainer.hpp
src/include/internal/utils/: Collisions.hpp  MSDFData.hpp  TSCommandQueue.hpp
src/input/: InputManager.cpp
src/particles/: ParticleManager.cpp
src/renderer/: RenderContextSingleton.cpp  RenderLayer.cpp  Renderer.cpp
src/rendering/: Circlec.cpp  FrameBuffer.cpp  IndexBuffer.cpp  Material.cpp  Quad.cpp  RenderContextSingleton.cpp  RenderID.cpp  RenderLayer.cpp  Renderer.cpp  RenderingManager.cpp  ShaderEffect.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/rendering/batchers/: CircleBatcher.cpp  QuadBatcher.cpp  TextBatcher.cpp  TextureBatcher.cpp
src/scenes/: Scene.cpp  SceneLayer.cpp  SceneLayerStack.cpp  SceneManager.cpp
src/shaders/: FragmentShader.cpp  Shader.cpp  ShaderChain.cpp  ShaderManager.cpp  ShaderPass.cpp  VertexShader.cpp
src/signals/: EventBus.cpp  SignalBus.cpp  SignalManager.cpp
src/sprites/: NinePatchSprite.cpp  Sprite.cpp
src/state/: TransitionConditionBlock.cpp
src/systems/: AnimationSystem.cpp  AreaSystem.cpp  CameraSystem.cpp  EntityCollisionSystem.cpp  InputSystem.cpp  MoveSystem.cpp  ProximitySystem.cpp  RenderSystem.cpp  StateSystem.cpp  System.cpp  SystemManager.cpp  TimerSystem.cpp
src/timing/: TimeManager.cpp
src/tween/: ITween.cpp  Tween.cpp  TweenManager.cpp
src/ui/: UIElement.cpp  UILayer.cpp  UIManager.cpp
src/ui/elements/: UIButton.cpp  UICanvas.cpp  UIContainer.cpp  UIFlexContainer.cpp  UIGrid.cpp  UILabel.cpp  UIPanel.cpp  UIStackPanel.cpp  UITextureRect.cpp
src/util/: Collisions.cpp  Draw.cpp  Easings.cpp  Exception.cpp  Math.cpp  Pauseable.cpp  Strings.cpp  UUID.cpp
(+73 files in other folders)
